# dependency_hell

./: README.md  README.rst  pyproject.toml
data/: mock_data.csv
dependency_hell/: demo2.py
dependency_hell/my_dir/: __init__.py  data.py  demo1.py
